<resources>
    <string name="app_name">Cinematic</string>
    <string name="error_toast">Что-то пошло не так: %1s</string>

    <!--    Фрагменты-->
    <string name="popular_movie">Популярно</string>
    <string name="now_playing">Смотрят</string>
    <string name="top_rated">Топ</string>
    <string name="upcoming">Скоро</string>
    <string name="release">%1$s - </string>
    <string name="director"> %1$s</string>
    <string name="movie_description_title">Обзор</string>
    <string name="movie_casts_title">В ролях</string>
    <string name="age_title">Возраст</string>
    <string name="birthday_title">Дата рождения</string>
    <string name="deathday_title">Дата смерти</string>
    <string name="person_bio_title">Биография</string>
    <string name="person_place_of_birthday">Место рождения:</string>
</resources>